--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <blockquote> Введіть ваш номер телефону</blockquote>        
         <form>
             <input type='text' name='number'><br><br>
-            <input type='submit' value='Відправити' id="send">
+            <input type='submit' value='Відправити'>
         </form> 
         <p></p>
     </div>
